# durse-rs

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml  durse.txt
.github/workflows/: ci.yml
src/: lib.rs  main.rs
