[package]
name = "derse"
version = "0.1.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
csv = "1.1"
serde = { version = "1", features = ["derive"] }