[package]
name = "durse"
version = "0.1.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
jwalk = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"