[package]
name = "durse"
version = "0.3.0"
authors = ["Curtis Alexander <calex@calex.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
jwalk = "0.6"
path-clean = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.34", features = [
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
] }
